# WallReel

./: .clang-format  .gitignore  CMakeLists.txt  README.md  config.schema.json
.gitea/workflows/: release.yml
.github/workflows/: build.yml  release.yml
Tests/: CMakeLists.txt  tst_configmgr.cpp  tst_imagemodel.cpp
WallReel/: main.cpp
WallReel/Assets/: CMakeLists.txt  app.desktop  apply.desktop  wallreel.desktop
WallReel/Assets/man/: man.1  man.5
WallReel/Core/: CMakeLists.txt  appoptions.cpp  appoptions.hpp  configmgr.cpp  configmgr.hpp  imagedata.cpp  imagedata.hpp  imagemodel.cpp  imagemodel.hpp  logger.cpp  logger.hpp  wallpaperservice.cpp  wallpaperservice.hpp
WallReel/Core/Cache/: manager.cpp  manager.hpp  types.hpp
WallReel/Core/Config/: data.hpp  manager.cpp  manager.hpp
WallReel/Core/Image/: data.cpp  data.hpp  manager.cpp  manager.hpp  model.cpp  model.hpp  provider.cpp  provider.hpp  proxymodel.cpp
WallReel/Core/Palette/: data.hpp  domcolor.cpp  domcolor.hpp  manager.cpp  manager.hpp  matchcolor.cpp  matchcolor.hpp  predefined.hpp
WallReel/Core/Provider/: bootstrap.hpp  carousel.hpp
WallReel/Core/Service/: manager.cpp  manager.hpp  wallpaper.cpp  wallpaper.hpp
WallReel/Core/Utils/: misc.hpp  texttemplate.hpp
WallReel/Core/palette/: data.hpp  manager.cpp  manager.hpp  predefined.hpp
WallReel/Core/utils/: logger.cpp  logger.hpp  misc.hpp  texttemplate.hpp
WallReel/UI/: CMakeLists.txt  Main.qml
WallReel/UI/Components/: WRTextButton.qml
WallReel/UI/Modules/: BottomBar.qml  Carousel.qml  ColorControl.qml  ReloadButton.qml  SearchBar.qml  SortControl.qml  TitleBar.qml  TopBar.qml
WallReel/UI/Pages/: CarouselScreen.qml  LoadingScreen.qml
WallReel/UI/Providers/: CarouselProvider.qml
app/: install.sh  wallpaper-carousel.desktop
docs/man/: man.1.md  man.5.md
misc/ColorArgTest/: index.html
src/: config.cpp  config.h  image_item.cpp  image_item.h  images_carousel.cpp  images_carousel.h  loading_indicator.cpp  loading_indicator.h  logger.cpp  logger.h  main.cpp  main_window.cpp  main_window.h  utils.h  version.h.in
src/core/: configmgr.cpp  imagedata.cpp  imagemodel.cpp  imagemodel.hpp  imageprovider.cpp  imageprovider.hpp
src/designer/: loading_indicator.ui
